--- a/blog-cms/.env
+++ b/blog-cms/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_GRAPHCMS_ENDPOINT='https://api-eu-central-1.graphcms.com/v2/cku56f92114s901yz0ce9ah3f/master'
+NEXT_PUBLIC_GRAPHCMS_ENDPOINT=https://api-sa-east-1.hygraph.com/v2/clhj35x942mhl01un1j5n8n8w/master
+
